# LLM_wiki_personal_brain

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.agents/skills/: gstack-autoplan  gstack-benchmark  gstack-browse  gstack-canary  gstack-careful  gstack-checkpoint  gstack-cso  gstack-design-consultation  gstack-design-html  gstack-design-review  gstack-design-shotgun  gstack-devex-review  gstack-document-release  gstack-freeze  gstack-guard  gstack-health  gstack-investigate  gstack-land-and-deploy  gstack-learn  gstack-office-hours  gstack-open-gstack-browser  gstack-pair-agent  gstack-plan-ceo-review  gstack-plan-design-review  gstack-plan-devex-review  gstack-plan-eng-review  gstack-qa  gstack-qa-only  gstack-retro  gstack-review  gstack-setup-browser-cookies  gstack-setup-deploy  gstack-ship  (+2 more)
.cursor/: settings.json
.playwright-cli/: page-2026-04-14T05-15-02-208Z.yml
brain-workbench/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
codex_plan/: Step1_plan.md  Step2_plan.md  Step3_plan.md  Step4_plan.md  Step6_plan.md  Step7_plan_interview.md
datasets/: README.md
docs/: Step1.md  Step1_checklist.md  Step1_res.md  Step2.md  Step2_checklist.md  Step3.md  Step3_res.md  Step4.md  Step4_implement_spect.md  Step4_mock_schema.md  Step4_name_conv_spect.md  Step5.md  Step6.md  Step6_res.md  Step_res.md  architecture.md  expert_experience_to_ontology_brain_harness_blueprint.md  step4_res.md
evolution/: README.md
scripts/: export_profile.py  extract_ontology.py  ingest.py  run_agent.py
tests/: conftest.py
(+388 files in other folders)
